--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,14 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/7afaf33e95.js"></script>
 </head>
 <body>
   <app-root></app-root>
+  <style>
+    body{ margin:0;font-family: 'Poppins', sans-serif;
+}
+  </style>
 </body>
 </html>
